# pieces-os-client-sdk-for-python

./: .gitignore  README.md  fixes.diff  pyproject.toml  sdk_patch.py
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.md
.github/workflows/: post_generation_fixes.py  release.yaml  update_sdks.yaml
docs/: AccessEnum.md  Accessor.md  Accessors.md  ActiveOSServerApplet.md  Activities.md  ActivitiesApi.md  Activity.md  ActivityApi.md  Aesthetics.md  AllocationApi.md  AllocationCloud.md  AllocationCloudStatus.md  AllocationCloudUrl.md  AllocationCloudUrls.md  AllocationStatusEnum.md  Allocations.md  AllocationsApi.md  AllowedCloudModelsInstanceConfiguration.md  Analyses.md  AnalysesApi.md  Analysis.md  AnalyticsTrackedAdoptionEventIdentifierDescriptionPairs.md  Anchor.md  AnchorApi.md  AnchorPoint.md  AnchorPointApi.md  AnchorPoints.md  AnchorPointsApi.md  AnchorTypeEnum.md  Anchors.md  AnchorsApi.md  Annotation.md  AnnotationApi.md  AnnotationTypeEnum.md  Annotations.md  AnnotationsApi.md  AnonymousTemporalRange.md  AppletApi.md  AppletOTAServerError.md  AppletServingHandlerType.md  (+809 more)
docs/.github/workflows/: release.yaml
docs/docs/: AnchorsApi.md  Auth0OpenAIUserMetadata.md  Auth0UserMetadata.md  CheckedOSUpdate.md  ConversationMessageApi.md  FlattenedConversation.md  Model.md  ModelDeleteCacheOutput.md  OSApi.md  OpenAIModelsListOutput.md  PrecreatedExternalProviderApiKey.md  PreupdatedExternalProviderApiKey.md  QGPTAgentRoutes.md  QGPTApi.md  QGPTStreamInput.md  QGPTStreamOutput.md  SeededAssetEnrichment.md  SeededConversation.md  SeededModel.md  SeededWebsite.md  SegmentedTechnicalLanguageFragment.md  UpdatingStatusEnum.md  WebsiteApi.md
docs/docs/docs/: AssetApi.md  Conversation.md  ConversationApi.md  CreatedExternalProviderApiKey.md  DeletedExternalProviderApiKey.md  ExternalProviderApi.md  FlattenedWebsite.md  MachineLearningApi.md  ModelApi.md  ModelDeleteCacheInput.md  ModelDownloadProgress.md  ModelMaxTokens.md  ModelsApi.md  OpenAIApi.md  OpenAIModelsListInput.md  PersonsApi.md  PredeletedExternalProviderApiKey.md  QGPTAgentRelatedRoutes.md  SeededActivity.md  SeededAsset.md  SeededConnectorTracking.md  SeededModels.md  SeededTrackedConversationEvent.md  SegmentedTechnicalLanguage.md  TrackedConversationEventIdentifierDescriptionPairs.md  (+6 more)
src/pieces_os_client/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
tests/: test_basic_annotation.py  test_basic_asset.py  test_basic_chat.py  test_basic_context.py  test_basic_copilot.py  test_basic_message.py  test_basic_tag.py  test_basic_user.py  test_basic_website.py  test_copilot.py  test_installation.py  test_version_compatibility.py
(+987 files in other folders)
